@@ -3,6 +3,9 @@
 changes in sbcl-1.3.9:
   * enhancement: more compact low-level error signaling code
   * optimization: faster out of line fixnum-float comparisons.
+  * bug fix: correctly handle the case of a non-local exit within a function
+    terminating the extent of dynamic-extent functions and variables in the
+    presence of multiple-values (lp#1463127)
 
 changes in sbcl-1.3.9 relative to sbcl-1.3.8:
   * minor incompatible change: NAMESTRING prefers to return a BASE-STRING
